# bridle

./: .dockerignore  .gitignore  README.md  pipeline-commands.json  plan.md  run_tests.bat
backend/: conftest.py  pyproject.toml
backend/src/bridle/: __init__.py  __main__.py  app.py  cli.py  coding_config.py  config.py  database.py
backend/tests/: _workspace_lifecycle.py  conftest.py  no_xfail_plugin.py  plan_helpers.py  test_app_startup.py  test_no_xfail_plugin.py  test_workspace_lifecycle.py
backend/tests/architecture/: test_application_route_contract.py
backend/tests/cli/: test_cli_unicode_and_version.py  test_obs_check.py  test_serve_db_tables.py  test_serve_git_init.py  test_serve_network_boundary.py
backend/tests/config/: test_workspace.py
backend/tests/events/: test_bus.py
backend/tests/helpers/: container_e2e.py  modification_workflow.py  plan_factory.py  verification_fixtures.py
backend/tests/logging/: test_facade.py  test_runtime_correlation.py  test_sink_contract.py
backend/tests/observability/: fake_langfuse.py  test_business_isolation.py  test_contract.py  test_facade.py  test_langfuse_adapter.py  test_langfuse_concurrency.py
backend/tests/test_api/: test_chat_messages_api.py  test_coding_orchestration_api.py  test_coding_sessions_list_api.py  test_contract.py  test_events_sse.py  test_execution_api.py  test_health_api.py  test_heartbeat_boundary.py  test_json_mirror.py  test_negotiate_complexity_endpoint.py  test_node_agent_run_lock.py  test_node_runs_container_diagnostics.py  test_nodes_api.py  test_plan_mode_api.py  test_plans_api.py  test_proposals_api.py  test_tasks_api.py  test_workspace.py  test_workspace_files_api.py
backend/tests/test_cli/: test_serve_git_init.py  test_serve_image_bootstrap.py
backend/tests/test_container_entrypoints/: test_backend_client_timeout.py  test_entrypoint_stubs.py  test_main_agent_logging.py  test_main_agent_loop.py  test_node_agent.py
backend/tests/test_container_integration/: conftest.py  test_full_session_flow.py  test_node_container_real_docker.py
backend/tests/test_engine/: test_access_request_flow.py  test_agent_provider_factory.py  test_agent_tool_registry.py  test_blocker_micro.py  test_constraint_metadata_cache.py  test_container_integration.py  test_container_orchestrator.py  test_container_runner.py  test_container_runner_factory.py  test_container_workspace.py  test_context_template.py  test_deepseek_agent_provider.py  test_executor.py  (+19 more)
information-radar/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
information-radar/config/: scoring.yaml  sources.yaml
information-radar/docker/: entrypoint.sh
information-radar/paper_bridge/: __init__.py  cli.py  config.py  http_client.py  logging_config.py  models.py
information-radar/tests/: conftest.py  test_archive.py  test_brief.py  test_dedupe.py  test_filter.py  test_models.py  test_notify.py  test_orchestrator.py  test_papers.py  test_scoring.py  test_sources.py  test_summarize.py  test_watermark.py
(+611 files in other folders)
